istio/virtualservice.yaml
# Istio Ingress Gateway does not support headless services (i.e. "ClusterIP: none")
# It is then required to create a new service that let's Kubernetes define a virtual ip in the cluster 
apiVersion: v1
kind: Service
metadata:
  name: tf-hub
  namespace: kubeflow
  labels:
    app: tf-hub
    app.kubernetes.io/deploy-manager: ksonnet
    ksonnet.io/component: kubeflow-core
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: hub
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: tf-hub
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubeflow
  namespace: default
spec:
  gateways:
  - istio-gateway
  hosts:
  - 'kubeflow.example.com'
  http:
  - match:
    - uri:
        prefix: /katib
    route:
    - destination:
        host: modeldb-frontend.kubeflow.svc.cluster.local
        port:
          number: 3000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ambassador.kubeflow.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo
  namespace: default
spec:
  gateways:
  - istio-gateway
  hosts:
  - 'argo.example.com'
  http:
  - match:
    - uri:
        prefix: /argo
    route:
    - destination:
        host: argo-ui.kubeflow.svc.cluster.local
        port:
          number: 80
